--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,10 +1,18 @@
 .appBody {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
+}
+
+.appBody h1 {
+    text-align: center;
+    margin-top: 1rem;
 }
 
 li {
     list-style: none;
+}
+
+h1 {
+    font-family: 'Text Me One', sans-serif;
 }
