--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -31,8 +31,8 @@
     max-width: 480px;
     height: 600px;
     border-radius: 34px;
-    background: linear-gradient(145deg, #cacaca, #f0f0f0);
-    box-shadow: 41px 41px 82px #bebebe, -41px -41px 82px #ffffff;
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);
+    box-shadow: 19px 19px 38px #bebebe, -19px -19px 38px #ffffff;
     overflow: hidden;
     z-index: 1;
 }
