--- a/frontend/src/components/RoundButton/RoundButton.module.css
+++ b/frontend/src/components/RoundButton/RoundButton.module.css
@@ -16,6 +16,9 @@
     color: var(--button-text);
     box-shadow: -2px -7px 10px #f1f1f1, 4px 6px 10px #d4d7da;
     transition: all 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .roundButton:active {
@@ -50,4 +53,5 @@
     height: 60px;
     border-style: none;
     align-items: center;
+    vertical-align: middle;
 }
