--- a/frontend/src/components/NewTaskInput/NewTaskInput.module.css
+++ b/frontend/src/components/NewTaskInput/NewTaskInput.module.css
@@ -21,13 +21,13 @@ form {
     outline: none;
     border-radius: 100px;
     padding: 1em;
-    background-color: #e1e2e3;
-    box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.3);
+    background-color: var(--input-bg);
+    box-shadow: var(--input-box-shadow);
     transition: 300ms ease-in-out;
 }
 
 .inputField:focus {
-    background-color: #ffffff;
+    background-color: var(--input-bg-focus);
     transform: scale(1.05);
-    box-shadow: 13px 13px 100px #969696, -13px -13px 100px #ffffff;
+    box-shadow: var(--input-box-shadow-focus);
 }
