--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,11 +8,20 @@
 }
 
 :root {
+    /* App body */
     --backgroundLayer-background: #e0e0e0;
     --foregroundLayer-background: linear-gradient(145deg, #f0f0f0, #cacaca);
     --foregroundLayer-box-shadow: 19px 19px 38px #bebebe,
         -19px -19px 38px #ffffff;
-    --button-bg: rgb(228, 232, 236);
+    /* New task input field */
+    --new-task-input-bg: #e1e2e3;
+    --new-task-input-box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.3);
+    --new-task-input-bg-focus: #ffffff;
+    --new-task-input-box-shadow-focus: 13px 13px 100px #969696,
+        -13px -13px 100px #ffffff;
+    --new-task-transition: 300ms ease-in-out;
+    /* Button */
+    --button-bg: #e0e0e0;
     --button-bg-grad: linear-gradient(
         45deg,
         rgb(228, 232, 236) 0%,
@@ -30,5 +39,5 @@
     --button-text: #9d9d9d;
 }
 
-body.dark {
-}
+/* body.dark {
+} */
