--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,7 @@
     --foregroundLayer-background: linear-gradient(145deg, #f0f0f0, #cacaca);
     --foregroundLayer-box-shadow: 19px 19px 38px #bebebe,
         -19px -19px 38px #ffffff;
+    --app-h1-color: #9d9d9d;
     /* New task input field */
     --new-task-input-bg: #e1e2e3;
     --new-task-input-box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.3);
@@ -20,6 +21,9 @@
     --new-task-input-box-shadow-focus: 13px 13px 100px #969696,
         -13px -13px 100px #ffffff;
     --new-task-transition: 300ms ease-in-out;
+    /* Task card */
+    --taskCard-bg: #e0e0e0;
+    --taskCard-box-shadow: 8px 8px 15px #bebebe, -8px -8px 15px #ffffff;
     /* Button */
     --button-bg: #e0e0e0;
     --button-bg-grad: linear-gradient(
