--- a/frontend/src/components/TaskEditInput/TaskEditInput.module.css
+++ b/frontend/src/components/TaskEditInput/TaskEditInput.module.css
@@ -1,5 +1,5 @@
 .input {
-    width: 100%;
+    width: 95%;
     max-width: 100%;
     min-height: 30px;
     padding: 6px 7px;
@@ -10,6 +10,7 @@
     border-radius: 10px;
     transition: all 0.5s;
     box-sizing: border-box;
+    color: var(--app-color);
 }
 
 /* .input:focus {
