--- a/frontend/src/pages/Auth/Auth.module.css
+++ b/frontend/src/pages/Auth/Auth.module.css
@@ -18,7 +18,6 @@
     margin: 20px auto;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
 }
 
 .authForm {
@@ -36,5 +35,20 @@
 }
 
 .authFooter h4 {
+    margin-top: 5%;
+    font-family: 'Text Me One', sans-serif;
     color: var(--app-h1-color);
+}
+
+.authLink {
+    color: var(--app-h1-color);
+    text-decoration: none;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.authLink:hover,
+.authLink:focus {
+    color: #3fd0ff; /* Light blue */
+    filter: drop-shadow(0 0 1px #3fd0ff);
 }
