--- a/frontend/src/pages/Auth/Auth.module.css
+++ b/frontend/src/pages/Auth/Auth.module.css
@@ -50,5 +50,5 @@
 .authLink:hover,
 .authLink:focus {
     color: #3fd0ff; /* Light blue */
-    filter: drop-shadow(0 0 1px #3fd0ff);
+    /* filter: drop-shadow(0 0 1px #3fd0ff); */
 }
