--- a/frontend/src/components/Task/Task.module.css
+++ b/frontend/src/components/Task/Task.module.css
@@ -28,7 +28,7 @@
 }
 
 .taskCard:hover {
-    box-shadow: 4px 4px 10px #bebebe, -4px -4px 10px #ffffff;
+    box-shadow: var(--taskCard-hover-box-shadow);
     transform: translateY(-2px);
 }
 
