--- a/frontend/src/components/AuthButton/AuthButton.module.css
+++ b/frontend/src/components/AuthButton/AuthButton.module.css
@@ -27,7 +27,7 @@
 
 .i {
     font-size: 20px;
-    background: linear-gradient(-45deg, gray 0%, lightgray 100%);
+    background: var(--auth-button-image-bg);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
