--- a/frontend/src/components/FetchTasksSpinner/FetchTasksSpinner.module.css
+++ b/frontend/src/components/FetchTasksSpinner/FetchTasksSpinner.module.css
@@ -36,7 +36,7 @@
 
     100% {
         transform: scale(1);
-        box-shadow: 8px 8px 14px #c5c5c5, -8px -8px 14px #ffffff;
+        box-shadow: var(--fetchspinner-animation-box-shadow);
     }
 }
 
@@ -48,7 +48,7 @@
 
     100% {
         transform: scale(1);
-        box-shadow: 8px 8px 14px #c5c5c5, -8px -8px 14px #ffffff;
+        box-shadow: var(--fetchspinner-animation-box-shadow);
     }
 }
 
@@ -60,6 +60,6 @@
 
     100% {
         transform: scale(1);
-        box-shadow: 8px 8px 14px #c5c5c5, -8px -8px 14px #ffffff;
+        box-shadow: var(--fetchspinner-animation-box-shadow);
     }
 }
