--- a/frontend/src/components/TaskCheckbox/TaskCheckbox.module.css
+++ b/frontend/src/components/TaskCheckbox/TaskCheckbox.module.css
@@ -21,15 +21,15 @@
     left: 0;
     height: 1.3em;
     width: 1.3em;
-    background-color: #ccc;
+    background-color: var(--checkmark-bg-color);
     border-radius: 100%;
-    background: #e8e8e8;
-    box-shadow: 3px 3px 5px #c5c5c5, -3px -3px 5px #ffffff;
+    background: var(--checkmark-bg);
+    box-shadow: var(--checkmark-box-shadow);
     transition-duration: 0.5s;
 }
 
 .container input:checked ~ .checkmark {
-    box-shadow: inset 3px 3px 5px #c5c5c5, inset -3px -3px 5px #ffffff;
+    box-shadow: var(--checkmark-container-box-shadow);
 }
 
 .checkmark:after {
@@ -49,7 +49,7 @@
     top: 0.25em;
     width: 0.25em;
     height: 0.5em;
-    border: solid darkgray;
+    border: var(--checkmark-container-border-after);
     border-width: 0 0.15em 0.15em 0;
     transform: scale(0.8) rotate(45deg);
     transition: opacity 0.3s ease, transform 0.3s ease;
