--- a/frontend/src/pages/Login/Login.module.css
+++ b/frontend/src/pages/Login/Login.module.css
@@ -49,6 +49,6 @@
 
 .loginLink:hover,
 .loginLink:focus {
-    color: #3fd0ff; /* Light blue */
-    /* filter: drop-shadow(0 0 1px #3fd0ff); */
+    color: var(--link-hover-color);
+    filter: var(--link-hover-glow);
 }
