--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,5 +68,43 @@
     --button-text: #9d9d9d;
 }
 
-/* body.dark {
-} */
+body.dark {
+    --backgroundLayer-background: #4d4d4d;
+    --foregroundLayer-background: linear-gradient(145deg, #5d5d5d, #3d3d3d);
+    --foregroundLayer-box-shadow: 19px 19px 38px #3c3c3c, -19px -19px 38px #5e5e5e;
+    --app-h1-color: #b0b0b0;
+    --app-color: #e0e0e0;
+    --link-hover-color: #6fcfff;
+    --link-hover-glow: drop-shadow(0 0 1px #6fcfff);
+    --auth-button-image-bg: linear-gradient(-45deg, #4d4d4d 0%, #6d6d6d 100%);
+    --fetchspinner-animation-box-shadow: 8px 8px 14px #3c3c3c, -8px -8px 14px #5e5e5e;
+    --navbar-link: #b0b0b0;
+    --navbar-link-hover-bg: rgba(80, 80, 80, 0.12);
+    --navbar-link-hover-color: #e0e0e0;
+    --roundbutton-image-background: linear-gradient(-45deg, #4d4d4d 0%, #6d6d6d 100%);
+    --task-card-button-icon-color: #b0b0b0;
+    --task-card-button-color: #6fcfff;
+    --task-card-button-filter: drop-shadow(0 0 1px #6fcfff);
+    --checkmark-bg-color: #5c5c5c;
+    --checkmark-bg: #4d4d4d;
+    --checkmark-box-shadow: 3px 3px 5px #3c3c3c, -3px -3px 5px #5e5e5e;
+    --checkmark-container-box-shadow: inset 3px 3px 5px #3c3c3c, inset -3px -3px 5px #5e5e5e;
+    --checkmark-container-border-after: solid #6d6d6d;
+    --task-edit-input-box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.5),
+        inset -2px -2px 5px rgba(255, 255, 255, 0.2);
+    --task-edit-input-box-shadow-editing: inset 5px 5px 10px rgba(0, 0, 0, 0.7),
+        inset -5px -5px 10px rgba(255, 255, 255, 0.2);
+    /* Task card */
+    --taskCard-bg: #4d4d4d;
+    --taskCard-box-shadow: 8px 8px 15px #3c3c3c, -8px -8px 15px #5e5e5e;
+    --taskCard-hover-box-shadow: 4px 4px 10px #3c3c3c, -4px -4px 10px #5e5e5e;
+    /* Button & round button */
+    --button-bg: #4d4d4d;
+    --button-bg-grad: linear-gradient(45deg, #5d5d5d 0%, #4d4d4d 100%);
+    --button-shadow-active: -2px -7px 10px #3c3c3c, 4px 6px 10px #5e5e5e;
+    --button-bg-active: #3d3d3d;
+    --button-bg-active-grad: linear-gradient(45deg, #3d3d3d 0%, #5d5d5d 100%);
+    --button-shadow: -2px -7px 10px #5e5e5e, 4px 6px 10px #3c3c3c, inset -2px -7px 10px #3c3c3c,
+        inset 4px 6px 10px #5e5e5e;
+    --button-text: #b0b0b0;
+}
